Variables.css classes creation

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,14 +1,14 @@
 .container {
-  color: hsl(17, 96%, 53%);
+  color: var(--primary-color);
   text-align: center;
 }
 
 footer {
-  background: black;
+  background: var(--background-color);
   padding: 20px 0;
 }
 
 a {
-  color: #FA5412;
+  color: var(--primary-color);
   text-decoration: none;
 }
