--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,5 +1,5 @@
 nav {
-  background: black;
+  background: var(--background-color);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -10,19 +10,14 @@ a {
   text-decoration: none;
   font-size: 18px;
   text-transform: uppercase;
-  color: #FA5412;
+  color: var(--primary-color);
 }
 
 .logo {
   font-size: 24px;
   font-weight: bold;
   letter-spacing: 0.5px;
-  background: linear-gradient(
-    45deg,
-    #e09d83 0%,
-    #e86d3c 50%,
-    #FA5412 100%
-  );
+  background: var(--gradient-color);
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
