--- a/src/app/views/loan-calculator/loan-calculator.component.css
+++ b/src/app/views/loan-calculator/loan-calculator.component.css
@@ -53,7 +53,7 @@ form {
   padding: 10px;
   margin: 10px;
   border: none;
-  background: #e0997d;
+  background: var(--secondary-color);
   color: #fff;
   font-weight: 600;
   border-radius: 5px;
@@ -74,7 +74,7 @@ form {
 
 .error-message {
   display: inline-flex;
-  color: #fa5412;
+  color: var(--primary-color);
   font-weight: bold;
   margin-left: 8px;
 }
@@ -108,7 +108,7 @@ input[type="number"] {
 }
 
 input[type="range"] {
-  --c: #fa5412; /* active color */
+  --c: var(--primary-color); /* active color */
   --g: 7px; /* the gap */
   --l: 3px; /* line thickness*/
   --s: 14px; /* thumb size*/
@@ -190,7 +190,7 @@ input[type="range"]::-moz-range-thumb {
 }
 
 select {
-  background: #e0997d;
+  background: var(--secondary-color);
   color: #fff;
   max-width: 91px;
 }
@@ -226,11 +226,11 @@ select {
 }
 
 .small-circle.light-red {
-  background: #e0997d;
+  background: var(--secondary-color);
 }
 
 .small-circle.dark-red {
-  background: #fa5412;
+  background: var(--primary-color);
 }
 
 .row {
@@ -258,7 +258,7 @@ button.apply {
   width: 100%;
   height: 48px;
   padding: 10px;
-  background: linear-gradient(45deg, #dd8c6d 0%, #e86d3c 50%, #fa5412 100%);
+  background: linear-gradient(45deg, #dd8c6d 0%, #e86d3c 50%, var(--primary-color) 100%);
   color: #fff;
   box-shadow: 0px 3px 6px #00000033;
   border: none;
