--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-navbar *ngIf="!isHomePage()"></app-navbar>
+<app-navbar *ngIf="!isHomePage"></app-navbar>
 <router-outlet></router-outlet>
-<app-footer *ngIf="!isHomePage()"></app-footer>
+<app-footer *ngIf="!isHomePage"></app-footer>
