--- a/src/app/views/loan-calculator/loan-calculator.component.css
+++ b/src/app/views/loan-calculator/loan-calculator.component.css
@@ -80,11 +80,10 @@ form {
 }
 
 input[type="number"],
-.slider,
 select {
   padding: 10px;
-  border: var(--input-borda);
-  border-radius: var(--input-raio);
+  border: none;
+  border-radius: 6px;
   text-align: center;
   flex: 1;
   margin-right: 10px;
@@ -94,10 +93,6 @@ input[type="number"] {
   color: rgb(70, 70, 70);
 }
 
-.slider {
-  max-width: 197px;
-}
-
 .input-slider-loan-amount {
   max-width: 190px;
 }
@@ -105,88 +100,6 @@ input[type="number"] {
 .input-slider-interest-amount,
 .input-slider-loan-term {
   max-width: 91px;
-}
-
-input[type="range"] {
-  --c: var(--primary-color); /* active color */
-  --g: 7px; /* the gap */
-  --l: 3px; /* line thickness*/
-  --s: 14px; /* thumb size*/
-
-  height: var(--s); /* needed for Firefox*/
-  --_c: color-mix(in srgb, var(--c), #000 var(--p, 0%));
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background: none;
-  cursor: pointer;
-  overflow: hidden;
-}
-input:focus-visible,
-input:hover {
-  --p: 25%;
-}
-input:active,
-input:focus-visible {
-  --_b: var(--s);
-}
-/* chromium */
-input[type="range" i]::-webkit-slider-thumb {
-  height: var(--s);
-  aspect-ratio: 1;
-  border-radius: 50%;
-  box-shadow: 0 0 0 var(--_b, var(--l)) inset var(--_c);
-  border-image: linear-gradient(90deg, var(--_c) 50%, #ababab 0) 1/0 100vw/0
-    calc(100vw + var(--g));
-  clip-path: polygon(
-    0 calc(50% + var(--l) / 2),
-    -100vw calc(50% + var(--l) / 2),
-    -100vw calc(50% - var(--l) / 2),
-    0 calc(50% - var(--l) / 2),
-    0 0,
-    100% 0,
-    100% calc(50% - var(--l) / 2),
-    100vw calc(50% - var(--l) / 2),
-    100vw calc(50% + var(--l) / 2),
-    100% calc(50% + var(--l) / 2),
-    100% 100%,
-    0 100%
-  );
-  -webkit-appearance: none;
-  appearance: none;
-  transition: 0.3s;
-}
-/* Firefox */
-input[type="range"]::-moz-range-thumb {
-  height: var(--s);
-  width: var(--s);
-  background: none;
-  border-radius: 50%;
-  box-shadow: 0 0 0 var(--_b, var(--l)) inset var(--_c);
-  border-image: linear-gradient(90deg, var(--_c) 50%, #ababab 0) 1/0 100vw/0
-    calc(100vw + var(--g));
-  clip-path: polygon(
-    0 calc(50% + var(--l) / 2),
-    -100vw calc(50% + var(--l) / 2),
-    -100vw calc(50% - var(--l) / 2),
-    0 calc(50% - var(--l) / 2),
-    0 0,
-    100% 0,
-    100% calc(50% - var(--l) / 2),
-    100vw calc(50% - var(--l) / 2),
-    100vw calc(50% + var(--l) / 2),
-    100% calc(50% + var(--l) / 2),
-    100% 100%,
-    0 100%
-  );
-  -moz-appearance: none;
-  appearance: none;
-  transition: 0.3s;
-}
-@supports not (color: color-mix(in srgb, red, red)) {
-  input {
-    --_c: var(--c);
-  }
 }
 
 select {
@@ -283,10 +196,6 @@ button.apply:hover {
   .left-side,
   .right-side {
     width: 100%;
-  }
-
-  .slider {
-    max-width: 148px;
   }
 }
 
