--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -49,6 +49,10 @@ a {
   transform: scale(1.05);
 }
 
+.nav-links li a:hover {
+  color: var(--secondary-color);
+}
+
 @media screen and (max-width: 550px) {
   a {
     font-size: 16px;
