Home style updated

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -2,7 +2,7 @@
   <img src="../../../assets/stack-coins.png" class="diagonal-image-top" />
   <img src="../../../assets/hand-coin.png" class="diagonal-image-bottom" />
   <div class="container">
-    <div class="right-side">
+    <div class="welcome fw-bold">
       <p class="first-line">Welcome to</p>
       <h5 class="app-title">Loan Calculator</h5>
       <button class="start-button" routerLink="/loan-calculator">Calculate</button>
