--- a/src/app/views/home/home.component.css
+++ b/src/app/views/home/home.component.css
@@ -2,26 +2,33 @@
   height: 100vh;
   background: var(--background-color);
   display: flex;
-  justify-content: center;
-  align-items: center;
   position: relative;
   overflow: hidden;
 }
 
-.diagonal-image-top {
+.home,
+.welcome,
+.start-button {  
+  justify-content: center;
+  align-items: center;
+}
+
+.diagonal-image-top,
+.diagonal-image-bottom {
   position: absolute;
-  top: -100px;
-  left: -180px;
-  width: 700px;
   animation: delayAppearance 4s ease 0s 1 forwards;
 }
 
+.diagonal-image-top {
+  top: -100px;
+  left: -180px;
+  width: 700px;
+}
+
 .diagonal-image-bottom {
-  position: absolute;
   bottom: -80px;
   right: -80px;
   width: 400px;
-  animation: delayAppearance 4s ease 0s 1 forwards;
 }
 
 .container {
@@ -33,27 +40,24 @@
   box-shadow: 0px 3px 6px #00000033;
 }
 
-.right-side {
-  flex: 1;
+.welcome {
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
-  text-align: center;
+}
+
+.first-line,
+.app-title,
+.start-button {
+  text-transform: uppercase;
+  opacity: 0;
+  color: #fff;
 }
 
 .first-line {
   font-size: 70px;
-  font-weight: bold;
-  text-transform: uppercase;
   letter-spacing: 0.5px;
-  background: white;
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
   margin-top: 20px;
   margin-bottom: 30px;
-  opacity: 0;
   animation: slideInFromTop 2s ease 0s 1 forwards;
 }
 
@@ -61,37 +65,19 @@
   margin: 10px 0;
   margin-bottom: 60px;
   font-size: 24px;
-  font-weight: bold;
-  text-transform: uppercase;
   letter-spacing: 0.5px;
-  background: white;
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  margin-top: 0;
-  opacity: 0;
   animation: slideInFromRight 2s ease 0s 1 forwards;
 }
 
 .start-button {
   display: inline-flex;
-  align-items: center;
   height: 48px;
   border-radius: 14px;
   border: none;
   padding: 0 48px;
-  background: linear-gradient(
-    45deg,
-    #dd8c6d 0%,
-    #e86d3c 50%,
-    rgb(241, 95, 38) 100%
-  );
-  color: #fff;
+  background: var(--gradient-color);
   cursor: pointer;
   box-shadow: 0px 3px 6px #00000033;
-  text-transform: uppercase;
-  font-weight: bold;
-  opacity: 0;
   animation: slideInFromBottom 2s ease 0s 1 forwards;
 }
 
