loan-calculator Style updated

--- a/src/app/views/loan-calculator/loan-calculator.component.css
+++ b/src/app/views/loan-calculator/loan-calculator.component.css
@@ -6,7 +6,7 @@
 
 .calculator-page {
   background: var(--background-color);
-  min-height: calc(100vh);
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,18 +19,10 @@ form {
   border-radius: 10px;
   max-width: 900px;
   width: 100%;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  border-radius: 10px;
-  max-width: 900px;
-  width: 100%;
-}
-
-.left-side,
-.right-side {
+.left-side, .right-side {
   flex: 1;
   padding: 20px;
   color: white;
@@ -42,7 +34,7 @@ form {
 
 .checkbox-group {
   display: flex;
-  flex-wrap: wrap;  
+  flex-wrap: wrap;
   margin-top: 10px;
 }
 
@@ -58,7 +50,7 @@ form {
   font-weight: 600;
   border-radius: 5px;
   cursor: pointer;
-  transition: background 0.3s;
+  transition: background 0.3s, transform 0.3s;
 }
 
 .ckb-loan-type:hover {
@@ -79,17 +71,13 @@ form {
   margin-left: 8px;
 }
 
-input[type="number"],
-select {
+input[type="number"], select {
   padding: 10px;
   border: none;
   border-radius: 6px;
   text-align: center;
   flex: 1;
   margin-right: 10px;
-}
-
-input[type="number"] {
   color: rgb(70, 70, 70);
 }
 
@@ -97,15 +85,13 @@ input[type="number"] {
   max-width: 190px;
 }
 
-.input-slider-interest-amount,
-.input-slider-loan-term {
+.input-slider-interest-amount, .input-slider-loan-term, select {
   max-width: 91px;
 }
 
 select {
   background: var(--secondary-color);
   color: #fff;
-  max-width: 91px;
 }
 
 .card {
@@ -124,7 +110,6 @@ select {
 .right-side {
   animation: slideInFromBottom 2s ease 0s 1 forwards;
 }
-
 
 .card-top {
   height: auto;
@@ -152,17 +137,9 @@ select {
   margin: 10px 0;
 }
 
-.info {
+.info, .amount-total, .total, .total-amout {
   flex: 1;
   color: rgb(70, 70, 70);
-}
-
-.amount-total {
-  color: rgb(70, 70, 70);
-}
-
-.total,
-.total-amout {
   font-weight: bold;
 }
 
@@ -179,8 +156,7 @@ button.apply {
   cursor: pointer;
   margin: 20px 0;
   text-transform: uppercase;
-  font-weight: bold;
-  transition: background 0.3s, color 0.3s;
+  transition: background 0.3s, color 0.3s, transform 0.3s;
 }
 
 button.apply:hover {
@@ -193,8 +169,7 @@ button.apply:hover {
     min-height: 100vh;
   }
 
-  .left-side,
-  .right-side {
+  .left-side, .right-side {
     width: 100%;
   }
 }
