--- a/src/app/views/loan-calculator/loan-calculator.component.css
+++ b/src/app/views/loan-calculator/loan-calculator.component.css
@@ -143,6 +143,11 @@ select {
   font-weight: bold;
 }
 
+.amount-total {
+  display: flex;
+  justify-content: end;
+}
+
 button.apply {
   display: block;
   width: 100%;
